--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -2,8 +2,8 @@
 <section id="banner" data-vide-bg="{{site.baseurl}}/assets/video/{% if site.video %}{{ site.video }}{% endif %}" data-vide-options="posterType: jpg, loop: true, muted: false, position: 50% 50%">
   <div class="wrapper">
     <div class="content">
-      <h1 class="title">{% if site.banner-title %}{{ site.banner-title }}{% else %}Hey NY ! Need Glass Works ,Glass Door For Store Front ? {% endif %}</h1>
-      <h2 class="sub_title">{% if site.banner-desc %}{{ site.banner-desc }}{% else %}"Tower Sign Is Here For Your Business p". — Lao Tzu{% endif %}</h2>
+      <h1 class="title">{% if site.banner-title %}{{ site.banner-title }}{% else %} Need Store Front Glass ? {% endif %}</h1>
+      <h2 class="sub_title">{% if site.banner-desc %}{{ site.banner-desc }}{% else %}"Tower Sign Is Here For Your Business p". — For Glass Works% endif %}</h2>
     </div>
   </div>
 </section> <!-- End Section Banner -->
